[gd_scene load_steps=7 format=3 uid="uid://678875yvabm1"]

[ext_resource type="Theme" uid="uid://cyua45ur0ijqo" path="res://assets/Main.theme" id="1_ylwtm"]
[ext_resource type="Script" path="res://components/PlaybackRow/PlaybackRowDummyContainer.gd" id="2_2cv70"]
[ext_resource type="Texture2D" uid="uid://dfrrs2dnvlvsu" path="res://assets/icons/Delete.svg" id="3_bbgfu"]
[ext_resource type="Texture2D" uid="uid://bwhtkajekd4o3" path="res://assets/icons/Auto.svg" id="4_h8847"]
[ext_resource type="Texture2D" uid="uid://c1cl6qetwg8st" path="res://assets/icons/Arrow_back.svg" id="5_vc8ob"]
[ext_resource type="Texture2D" uid="uid://kkblmodueva1" path="res://assets/icons/Arrow_foward.svg" id="6_mccye"]

[node name="PlaybackRowDummyContainer" type="VBoxContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_ylwtm")
script = ExtResource("2_2cv70")

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer2"]
layout_mode = 2

[node name="Delete" type="Button" parent="PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("3_bbgfu")
icon_alignment = 1

[node name="Auto" type="Button" parent="PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("4_h8847")
icon_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Left" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("5_vc8ob")
icon_alignment = 1

[node name="Right" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("6_mccye")
icon_alignment = 1

[connection signal="pressed" from="PanelContainer2/HBoxContainer/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="PanelContainer2/HBoxContainer/Auto" to="." method="_on_auto_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/Right" to="." method="_on_right_pressed"]
